@@ -3,14 +3,14 @@ package com.nighttrip.core.global.config;
 import com.nighttrip.core.oauth.service.CustomOAuth2UserService;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession; // HttpSession 임포트 추가
+import jakarta.servlet.http.HttpSession; // HttpSession 임포트 유지
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseCookie;
+import org.springframework.http.ResponseCookie; // ResponseCookie 임포트 유지
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -25,7 +25,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
-@Slf4j // Lombok 로거
+@Slf4j
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -34,40 +34,36 @@ public class SecurityConfig {
     private final CustomOAuth2UserService customOAuth2UserService;
 
     @Value("${frontend.url}")
-    private String frontUrl; // application.yaml 또는 환경변수에서 주입 (예: https://localhost:3000)
+    private String frontUrl;
 
-    // 백엔드 쿠키 도메인을 application.yaml에서 가져오도록 설정
-    @Value("${spring.session.servlet.cookie.domain}")
-    private String cookieDomain; // 예: dev.nighttrip.co.kr
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http
-                .csrf(csrf -> csrf.disable()) // CSRF 비활성화 (Rest API에서 토큰 방식 사용 시)
-                .cors(Customizer.withDefaults()) // CORS 설정 적용
+                .csrf(csrf -> csrf.disable())
+                .cors(Customizer.withDefaults())
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED) // 세션 사용
+                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
+                        .sessionFixation().changeSessionId()
                 )
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/api/v1/oauth/status").permitAll() // 로그인 상태 확인 API는 인증 없이 접근 허용
-                        .requestMatchers("/api/v1/search/**","/api/v1/search/recommend","/api/v1/search/popular").permitAll() // 검색 API는 인증 없이 접근 허용
-                        .requestMatchers("/oauth2/**").permitAll() // OAuth2 관련 경로는 인증 없이 접근 허용
-                        .requestMatchers("/favicon.ico").permitAll() // favicon.ico 요청 허용
-                        .requestMatchers(HttpMethod.GET, "/health").permitAll() // 헬스 체크 경로 허용
-                        .anyRequest().authenticated() // 그 외 모든 요청은 인증 필요
+                        .requestMatchers("/api/v1/oauth/status").permitAll()
+                        .requestMatchers("/api/v1/search/**", "/api/v1/search/recommend", "/api/v1/search/popular").permitAll()
+                        .requestMatchers("/oauth2/**").permitAll()
+                        .requestMatchers("/favicon.ico").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/health").permitAll()
+                        .anyRequest().authenticated()
                 )
                 .oauth2Login(oauth -> oauth
                         .userInfoEndpoint(userInfo -> userInfo
-                                .userService(customOAuth2UserService) // 사용자 정보 가져오는 서비스 설정
+                                .userService(customOAuth2UserService)
                         )
-
-                        .defaultSuccessUrl(frontUrl + "/", true)
                         .successHandler((request, response, authentication) -> {
-                            log.info(">>>> OAuth2 Login Success Handler Called!");
-                            log.info(">>>> Redirecting to: {}", frontUrl + "/"); // https://localhost:3000/
+                            log.info(">>>> OAuth2 로그인 성공 핸들러 호출됨!");
+                            log.info(">>>> {}로 리다이렉트합니다.", frontUrl + "/");
 
-                            HttpSession session = request.getSession(false);
+                            HttpSession session = request.getSession(false); // 세션이 없다면 생성하지 않음
                             String sessionId = null;
                             if (session != null) {
                                 sessionId = session.getId();
@@ -76,16 +72,16 @@ public class SecurityConfig {
                             if (sessionId != null) {
                                 ResponseCookie jsessionidCookie = ResponseCookie.from("JSESSIONID", sessionId)
                                         .path("/")
-                                        .domain("localhost")  // 여기 매우 중요!
                                         .httpOnly(true)
-                                        .secure(true) // SameSite=None이면 필수
-                                        .sameSite("None") // 완전 허용
-                                        .maxAge(60 * 60 * 24 * 7)
+                                        .secure(true)
+                                        .sameSite("None")
+                                        .maxAge(60 * 60 * 24 * 7) // 7일 유지
                                         .build();
+                                log.info(">>>> JSESSIONID 쿠키 헤더 추가 직전. 응답 커밋 여부: {}", response.isCommitted()); // <-- 여기 추가
                                 response.addHeader("Set-Cookie", jsessionidCookie.toString());
-                                log.info(">>>> Manually added Set-Cookie Header for JSESSIONID: {}", jsessionidCookie.toString());
+                                log.info(">>>> JSESSIONID 쿠키 헤더를 수동으로 추가했습니다: {}", jsessionidCookie.toString());
                             } else {
-                                log.warn(">>>> JSESSIONID was null after OAuth2 login. Cannot manually add cookie.");
+                                log.warn(">>>> OAuth2 로그인 후 JSESSIONID가 null입니다. 수동으로 쿠키를 추가할 수 없습니다.");
                             }
                             response.sendRedirect(frontUrl + "/");
                         })
@@ -101,24 +97,22 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowCredentials(true); // 인증 정보(쿠키, HTTP 인증 헤더 등) 전송 허용
+        configuration.setAllowCredentials(true);
 
-        // CORS 허용할 Origin 목록
         configuration.setAllowedOrigins(Arrays.asList(
                 "https://localhost:3000",
                 "http://localhost:3000",
                 "https://www.nighttrip.co.kr",
                 "https://dev.nighttrip.co.kr"
-                ));
+        ));
 
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Set-Cookie","Access-Control-Allow-Origin"));
-        configuration.setExposedHeaders(List.of("Set-Cookie","Access-Control-Allow-Origin"));
-
-        configuration.setMaxAge(3600L); // Preflight 요청 결과 캐싱 시간
+        configuration.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization"));
+        configuration.setExposedHeaders(List.of());
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // 모든 경로에 CORS 설정 적용
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
